tools/97_addons/experimental/impact/route-zzzz.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: zzzz
  namespace: ibm-aiops-evtmgr
  uid: 3b658f5a-eeb3-4348-bd4c-c2512857b2ac
  resourceVersion: '4137792'
  creationTimestamp: '2023-05-10T08:46:04Z'
  labels:
    app.kubernetes.io/instance: evtmanager
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: impactgui
    hdm.ibm.com/chartversion: 1.6.6
    hdm.ibm.com/lastreconciled: 2023-05-10-08-19-14-615269171-0000-UTC-m-757-382204293
    hdm.ibm.com/resourceowner: evtmanagernoi-ibm-com-v1beta1
    helm.sh/chart: impactgui
    release: evtmanager
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-05-10T08:46:04Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            'f:helm.sh/chart': {}
            'f:hdm.ibm.com/lastreconciled': {}
            'f:app.kubernetes.io/managed-by': {}
            'f:hdm.ibm.com/resourceowner': {}
            'f:app.kubernetes.io/name': {}
            .: {}
            'f:hdm.ibm.com/chartversion': {}
            'f:release': {}
            'f:app.kubernetes.io/instance': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:insecureEdgeTerminationPolicy': {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2023-05-10T08:46:04Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
spec:
  host: zzzz-ibm-aiops-evtmgr.apps.ocp-270003bu3k-w4q8.cloud.techzone.ibm.com
  to:
    kind: Service
    name: evtmanager-impactgui
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - host: zzzz-ibm-aiops-evtmgr.apps.ocp-270003bu3k-w4q8.cloud.techzone.ibm.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2023-05-10T08:46:04Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.ocp-270003bu3k-w4q8.cloud.techzone.ibm.com
